<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrador.myapplication.SecondActivity"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton" />

            <Button
                android:id="@+id/button_spannable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/objeto_spannable" />

            <Button
                android:id="@+id/button_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttons" />

            <Button
                android:id="@+id/button_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imageview" />

            <Button
                android:id="@+id/button_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner" />

            <Button
                android:id="@+id/button_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listview" />

            <Button
                android:id="@+id/button_gridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gridLayout" />

            <Button
                android:id="@+id/button_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linearLayout" />

            <Button
                android:id="@+id/button_RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relativeLayout" />

            <Button
                android:id="@+id/button_checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox" />

            <Button
                android:id="@+id/button_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edittext" />

            <Button
                android:id="@+id/button_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview" />

            <Button
                android:id="@+id/button_tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tableLayout" />

            <Button
                android:id="@+id/button_listViewEmpleados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Empleados" />

            <Button
                android:id="@+id/button_gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gridview" />

            <Button
                android:id="@+id/button_Async"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/async" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
